--- a/prop_validation/prop_validation/src/App.css
+++ b/prop_validation/prop_validation/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.type_props {
+  border: 1px solid black; 
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
